# aeo-box

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  test-file.md
.claude/: settings.json
.github/: BRANCH_PROTECTION.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  model_behavior.yml
.github/workflows/: auto-create-branch.yml  branch-protection-check.yml  claude-code-review.yml  claude-dedupe-issues.yml  claude-issue-triage.yml  duplicate-issue-management.yml  pr-branch-enforcement.yml  pr-cleanup-automation.yml
agentic-aeo/: .env.example  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  COST_OPTIMIZATION.md  DEVELOPMENT_HISTORY.md  README.md  REMEDIATION_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt
agentic-aeo/src/: __init__.py
agentic-aeo/src/aeo_skill/: content_analyzer.py
agentic-aeo/src/agents/: __init__.py  auditor_agent.py  base_agent.py  citation_tracker_agent.py  learning_agent.py  optimizer_agent.py  orchestrator_agent.py  reporter_agent.py  researcher_agent.py
agentic-aeo/src/api/: ERROR_CODES.md  __init__.py  main.py  models.py
agentic-aeo/src/api/routes/: __init__.py  campaigns.py  status.py
agentic-aeo/src/cli/: __init__.py  main.py
agentic-aeo/src/cli/commands/: __init__.py  campaign.py  compete.py  monitor.py
agentic-aeo/src/communication/: __init__.py  protocol.py
agentic-aeo/src/persistence/: __init__.py  campaign_store.py  file_ops.py  workflow_store.py
agentic-aeo/src/utils/: __init__.py  config.py  logging.py
agentic-aeo/src/workflows/: __init__.py  campaign_workflow.py  competitive_workflow.py  monitoring_workflow.py
agentic-aeo/tests/e2e/: __init__.py  test_competitive_analysis.py  test_complete_workflow.py  test_full_campaign.py  test_monitoring.py
agentic-aeo/tests/integration/: test_auditor_integration.py  test_chaos_scenarios.py  test_error_handling.py  test_optimizer_citation_integration.py  test_orchestrator_integration.py  test_quality_validation.py  test_researcher_reporter_integration.py  test_workflow_integration.py  test_workflow_validation.py  test_workflows.py
agentic-aeo/tests/mocks/: __init__.py  mock_agents.py
agentic-aeo/tests/unit/: test_api.py  test_auditor_agent.py  test_citation_tracker_agent.py  test_cli.py  test_mock_agents.py  test_optimizer_agent.py  test_researcher_reporter.py  test_workflow_store.py  test_workflows.py
answer-engine-optimization/: CHANGELOG.md  QUICKSTART.md  README.md  SKILL.md  requirements.txt
answer-engine-optimization/modules/: __init__.py  api_manager.py  citation_tracker.py  optimizer.py  query_researcher.py  report_generator.py  success_patterns.py  utils.py
documentation/: cost-optimization.md  deployment-guide.md  user-guide.md
documentation/DEPRECATED/: README.md  api-reference.md  architecture.md
documentation/delivery/: CODE_REVIEW_REPORT.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  REMEDIATION_PLAN.md  product-validation-v1.5.md  project-management-assessment-v1.5.md  sprint-1-dod-verification.md  sprint-1-retrospective.md  sprint-2-dod-verification.md  sprint-2-retrospective.md  sprint-3-retrospective.md  sprint-plan-v1.5.md  sprint-refinement-action-plan.md  (+1 more)
scripts/: sync-labels.sh
(+2 files in other folders)
